# ticket-system-drf

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
cork/: manage.py
cork/app_core/: admin.py  apps.py  models.py  permissions.py  populate_db.py  serializers.py  tasks.py  urls.py  views.py
cork/cork/: .env  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/backend/: Dockerfile  server-entrypoint.sh
docker/cork/: Dockerfile  psycopg_populate_db.py  server-entrypoint.sh  worker-entrypoint.sh
docker/nginx/: default.conf
